# DataScience-ECL-BE1

./: .gitignore  README.md  best.py  best_knn.py  data_viz.py  get_stat_from_data.py  handle_data_pandas.py  helper.py  knn.py  main.py  notebook.ipynb  preparing_data_for_model.py  pyproject.toml  read.py  requirements.txt  separate_lines.py  visu.ipynb  vizu.py
data/: sample_submission.csv  test.csv:Zone.Identifier  train.csv:Zone.Identifier
src/: get_stat_from_data.py  handle_data_pandas.py  helper.py  main.py  prepare_data_for_model.py  preparing_data_for_model.py
src/models/: knn.py  transformers_encoder.py  xgboost.py
src/models/transformer/: prepare_data_for_transformer.py  tokenizer.py  train_transformer.py  transformers_encoder.py  utils.py
src/models/transformer/results/: tokenizer.json
submission/: submission_sample_knn.csv  xgboost_submission.csv
tests/models/: test_knn.py  test_tokenizer.py  test_xgboost.py
tests/unit/: test_get_stat_from_data.py  test_helper.py  test_prepare_data_for_model.py
